--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </section>
 
     <section class="parceiros">
+      <!-- Exemplo de card com botão WhatsApp -->
       <div class="card">
         <img src="images/pena-silveira.jpg" alt="Pena e Silveira Advogados">
         <div class="card-content">
@@ -36,6 +37,7 @@
           <p>Assessoria jurídica exclusiva para bares e restaurantes. Associado Abrasel tem desconto nos serviços.</p>
           <p><strong>Email:</strong> contato@penasilveira.com.br<br>
           <strong>WhatsApp:</strong> (31) 98245-6651<br>
+          <a href="https://wa.me/5531982456651" target="_blank" class="botao-whatsapp-card">Falar no WhatsApp</a><br>
           <strong>Site:</strong> <a href="http://www.bareserestaurantes.adv.br" target="_blank">bareserestaurantes.adv.br</a></p>
         </div>
       </div>
@@ -47,6 +49,7 @@
           <p>Soluções em seguros e benefícios para funcionários dos associados Abrasel.</p>
           <p><strong>Email:</strong> luizhenrique@bissolucoes.com.br<br>
           <strong>WhatsApp:</strong> (31) 98448-7057<br>
+          <a href="https://wa.me/5531984487057" target="_blank" class="botao-whatsapp-card">Falar no WhatsApp</a><br>
           <strong>Site:</strong> <a href="https://bissolucoes.com.br" target="_blank">bissolucoes.com.br</a></p>
         </div>
       </div>
@@ -58,6 +61,7 @@
           <p>Consultoria gratuita em licenciamento com 20% de desconto em serviços de regularização.</p>
           <p><strong>Email:</strong> comercial@urbanasregularizacoes.com.br<br>
           <strong>WhatsApp:</strong> (31) 99611-0444<br>
+          <a href="https://wa.me/5531996110444" target="_blank" class="botao-whatsapp-card">Falar no WhatsApp</a><br>
           <strong>Site:</strong> <a href="http://www.urbanasregularizacoes.com.br" target="_blank">urbanasregularizacoes.com.br</a></p>
         </div>
       </div>
@@ -78,6 +82,7 @@
           <p>Consultoria de gestão com 10% de desconto para associados Abrasel.</p>
           <p><strong>Email:</strong> contato@maxupconsultoria.com.br<br>
           <strong>WhatsApp:</strong> (31) 97330-1144<br>
+          <a href="https://wa.me/5531973301144" target="_blank" class="botao-whatsapp-card">Falar no WhatsApp</a><br>
           <strong>Site:</strong> <a href="http://www.maxupconsultoria.com.br" target="_blank">maxupconsultoria.com.br</a></p>
         </div>
       </div>
@@ -101,6 +106,7 @@
           <p><strong>Contato:</strong> William Matos<br>
           <strong>Email:</strong> william@multimidiaconsultoria.com.br<br>
           <strong>WhatsApp:</strong> (31) 99115-6941<br>
+          <a href="https://wa.me/5531991156941" target="_blank" class="botao-whatsapp-card">Falar no WhatsApp</a><br>
           <strong>Site:</strong> <a href="https://www.ricardomariatrancas.com.br" target="_blank">ricardomariatrancas.com.br</a></p>
         </div>
       </div>
@@ -124,6 +130,11 @@
     <footer>
       <a href="https://mg.abrasel.com.br/parceiros/" target="_blank" class="botao-parceiros">Ver todos os parceiros no site da Abrasel MG</a>
     </footer>
+
+    <!-- Botão flutuante para parcerias -->
+    <a href="https://wa.me/553172408551" target="_blank" class="botao-wpp-parcerias" title="Falar com responsável pelas parcerias da Abrasel MG">
+      🤝 Falar com Parcerias Abrasel
+    </a>
   </main>
 </body>
 </html>
