--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
     .botao-wpp-parcerias:hover {
       background-color: #128C7E;
     }
+
+    .segmento {
+      margin-bottom: 3rem;
+    }
+
+    .segmento h2 {
+      text-align: center;
+      margin-bottom: 2rem;
+      font-size: 1.8rem;
+      color: #00703c;
+    }
+
+    /* Estilo para o filtro */
+    #filtro-segmento {
+      display: block;
+      margin: 2rem auto;
+      padding: 0.5rem 1rem;
+      font-size: 1.1rem;
+      border-radius: 6px;
+      border: 1px solid #00703c;
+      max-width: 300px;
+    }
   </style>
 </head>
 <body>
@@ -68,94 +90,150 @@
       <p><strong>Junte-se a mais de 20 mil empresários do setor e transforme o seu restaurante com o Menu de Parceiros da Abrasel MG!</strong></p>
     </section>
 
-    <section class="parceiros">
-      <div class="card">
-        <img src="images/pena-silveira.jpg" alt="Pena e Silveira Advogados" />
-        <div class="card-content">
-          <h3>Pena & Silveira Advogados</h3>
-          <p>Assessoria jurídica exclusiva para bares e restaurantes. Associado Abrasel tem desconto nos serviços.</p>
-          <p><strong>Email:</strong> contato@penasilveira.com.br<br />
-          <strong>WhatsApp:</strong> (31) 98245-6651<br />
-          <a href="https://wa.me/5531982456651" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-          <strong>Site:</strong> <a href="http://www.bareserestaurantes.adv.br" target="_blank" rel="noopener noreferrer">bareserestaurantes.adv.br</a></p>
+    <!-- Menu de filtro -->
+    <section style="text-align:center; margin-bottom:2rem;">
+      <label for="filtro-segmento"><strong>Filtrar por segmento:</strong></label>
+      <select id="filtro-segmento" aria-label="Filtrar parceiros por segmento">
+        <option value="todos" selected>Todos</option>
+        <option value="Jurídico">Jurídico</option>
+        <option value="Seguros e Benefícios">Seguros e Benefícios</option>
+        <option value="Licenciamento e Regulação">Licenciamento e Regulação</option>
+        <option value="Marketing e Comunicação">Marketing e Comunicação</option>
+        <option value="Consultoria e Gestão">Consultoria e Gestão</option>
+        <option value="Energia e Sustentabilidade">Energia e Sustentabilidade</option>
+        <option value="Treinamentos e Mentorias">Treinamentos e Mentorias</option>
+        <option value="Loteria">Loteria</option>
+      </select>
+    </section>
+
+    <!-- SEGMENTOS -->
+
+    <section class="segmento" data-segmento="Jurídico">
+      <h2>Jurídico</h2>
+      <div class="parceiros">
+        <div class="card">
+          <img src="images/pena-silveira.jpg" alt="Pena e Silveira Advogados" />
+          <div class="card-content">
+            <h3>Pena & Silveira Advogados</h3>
+            <p>Assessoria jurídica exclusiva para bares e restaurantes. Associado Abrasel tem desconto nos serviços.</p>
+            <p><strong>Email:</strong> contato@penasilveira.com.br<br />
+            <strong>WhatsApp:</strong> (31) 98245-6651<br />
+            <a href="https://wa.me/5531982456651" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
+            <strong>Site:</strong> <a href="http://www.bareserestaurantes.adv.br" target="_blank" rel="noopener noreferrer">bareserestaurantes.adv.br</a></p>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="card">
-        <img src="images/bis.jpg" alt="BIS Soluções" />
-        <div class="card-content">
-          <h3>BIS Soluções</h3>
-          <p>Soluções em seguros e benefícios para funcionários dos associados Abrasel.</p>
-          <p><strong>Email:</strong> luizhenrique@bissolucoes.com.br<br />
-          <strong>WhatsApp:</strong> (31) 98448-7057<br />
-          <a href="https://wa.me/5531984487057" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-          <strong>Site:</strong> <a href="https://bissolucoes.com.br" target="_blank" rel="noopener noreferrer">bissolucoes.com.br</a></p>
+    <section class="segmento" data-segmento="Seguros e Benefícios">
+      <h2>Seguros e Benefícios</h2>
+      <div class="parceiros">
+        <div class="card">
+          <img src="images/bis.jpg" alt="BIS Soluções" />
+          <div class="card-content">
+            <h3>BIS Soluções</h3>
+            <p>Soluções em seguros e benefícios para funcionários dos associados Abrasel.</p>
+            <p><strong>Email:</strong> luizhenrique@bissolucoes.com.br<br />
+            <strong>WhatsApp:</strong> (31) 98448-7057<br />
+            <a href="https://wa.me/5531984487057" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
+            <strong>Site:</strong> <a href="https://bissolucoes.com.br" target="_blank" rel="noopener noreferrer">bissolucoes.com.br</a></p>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="card">
-        <img src="images/urbanas.jpg" alt="Urbanas Regularizações" />
-        <div class="card-content">
-          <h3>Urbanas Regularizações</h3>
-          <p>Consultoria gratuita em licenciamento com 20% de desconto em serviços de regularização.</p>
-          <p><strong>Email:</strong> comercial@urbanasregularizacoes.com.br<br />
-          <strong>WhatsApp:</strong> (31) 99611-0444<br />
-          <a href="https://wa.me/5531996110444" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-          <strong>Site:</strong> <a href="http://www.urbanasregularizacoes.com.br" target="_blank" rel="noopener noreferrer">urbanasregularizacoes.com.br</a></p>
+    <section class="segmento" data-segmento="Licenciamento e Regulação">
+      <h2>Licenciamento e Regulação</h2>
+      <div class="parceiros">
+        <div class="card">
+          <img src="images/urbanas.jpg" alt="Urbanas Regularizações" />
+          <div class="card-content">
+            <h3>Urbanas Regularizações</h3>
+            <p>Consultoria gratuita em licenciamento com 20% de desconto em serviços de regularização.</p>
+            <p><strong>Email:</strong> comercial@urbanasregularizacoes.com.br<br />
+            <strong>WhatsApp:</strong> (31) 99611-0444<br />
+            <a href="https://wa.me/5531996110444" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
+            <strong>Site:</strong> <a href="http://www.urbanasregularizacoes.com.br" target="_blank" rel="noopener noreferrer">urbanasregularizacoes.com.br</a></p>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="card">
-        <img src="images/forno-criativo.jpg" alt="Forno Criativo" />
-        <div class="card-content">
-          <h3>Forno Criativo</h3>
-          <p>Assessoria de marketing especializada no setor de alimentação.</p>
-          <p><strong>Instagram:</strong> <a href="https://www.instagram.com/agenciafornocriativo/" target="_blank" rel="noopener noreferrer">@agenciafornocriativo</a></p>
+    <section class="segmento" data-segmento="Marketing e Comunicação">
+      <h2>Marketing e Comunicação</h2>
+      <div class="parceiros">
+        <div class="card">
+          <img src="images/forno-criativo.jpg" alt="Forno Criativo" />
+          <div class="card-content">
+            <h3>Forno Criativo</h3>
+            <p>Assessoria de marketing especializada no setor de alimentação.</p>
+            <p><strong>Instagram:</strong> <a href="https://www.instagram.com/agenciafornocriativo/" target="_blank" rel="noopener noreferrer">@agenciafornocriativo</a></p>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="card">
-        <img src="images/maxup.jpg" alt="MaxUp Consultoria" />
-        <div class="card-content">
-          <h3>MaxUp Consultoria</h3>
-          <p>Consultoria de gestão com 10% de desconto para associados Abrasel.</p>
-          <p><strong>Email:</strong> contato@maxupconsultoria.com.br<br />
-          <strong>WhatsApp:</strong> (31) 97330-1144<br />
-          <a href="https://wa.me/5531973301144" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-          <strong>Site:</strong> <a href="http://www.maxupconsultoria.com.br" target="_blank" rel="noopener noreferrer">maxupconsultoria.com.br</a></p>
+    <section class="segmento" data-segmento="Consultoria e Gestão">
+      <h2>Consultoria e Gestão</h2>
+      <div class="parceiros">
+        <div class="card">
+          <img src="images/maxup.jpg" alt="MaxUp Consultoria" />
+          <div class="card-content">
+            <h3>MaxUp Consultoria</h3>
+            <p>Consultoria de gestão com 10% de desconto para associados Abrasel.</p>
+            <p><strong>Email:</strong> contato@maxupconsultoria.com.br<br />
+            <strong>WhatsApp:</strong> (31) 97330-1144<br />
+            <a href="https://wa.me/5531973301144" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
+            <strong>Site:</strong> <a href="http://www.maxupconsultoria.com.br" target="_blank" rel="noopener noreferrer">maxupconsultoria.com.br</a></p>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="card">
-        <img src="images/maya.jpg" alt="Maya Energy" />
-        <div class="card-content">
-          <h3>Maya Energy</h3>
-          <p>Referência em eficiência energética com foco em energia solar, hídrica e mercado livre.</p>
-          <p><strong>Contato:</strong> Eric Mota<br />
-          <strong>Email:</strong> eric.mota@mayaenergy.com<br />
-          <strong>Site:</strong> <a href="https://www.assinemaya.com.br" target="_blank" rel="noopener noreferrer">assinemaya.com.br</a></p>
+    <section class="segmento" data-segmento="Energia e Sustentabilidade">
+      <h2>Energia e Sustentabilidade</h2>
+      <div class="parceiros">
+        <div class="card">
+          <img src="images/maya.jpg" alt="Maya Energy" />
+          <div class="card-content">
+            <h3>Maya Energy</h3>
+            <p>Referência em eficiência energética com foco em energia solar, hídrica e mercado livre.</p>
+            <p><strong>Contato:</strong> Eric Mota<br />
+            <strong>Email:</strong> eric.mota@mayaenergy.com<br />
+            <strong>Site:</strong> <a href="https://www.assinemaya.com.br" target="_blank" rel="noopener noreferrer">assinemaya.com.br</a></p>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="card">
-        <img src="images/ricardo.jpg" alt="Ricardo Maria Tranças" />
-        <div class="card-content">
-          <h3>Ricardo Maria Tranças</h3>
-          <p>Mentorias, workshops e treinamentos práticos com 10% de desconto para associados.</p>
-          <p><strong>Contato:</strong> William Matos<br />
-          <strong>Email:</strong> william@multimidiaconsultoria.com.br<br />
-          <strong>WhatsApp:</strong> (31) 99115-6941<br />
-          <a href="https://wa.me/5531991156941" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-          <strong>Site:</strong> <a href="https://www.ricardomariatrancas.com.br" target="_blank" rel="noopener noreferrer">ricardomariatrancas.com.br</a></p>
+    <section class="segmento" data-segmento="Treinamentos e Mentorias">
+      <h2>Treinamentos e Mentorias</h2>
+      <div class="parceiros">
+        <div class="card">
+          <img src="images/ricardo.jpg" alt="Ricardo Maria Tranças" />
+          <div class="card-content">
+            <h3>Ricardo Maria Tranças</h3>
+            <p>Mentorias, workshops e treinamentos práticos com 10% de desconto para associados.</p>
+            <p><strong>Contato:</strong> William Matos<br />
+            <strong>Email:</strong> william@multimidiaconsultoria.com.br<br />
+            <strong>WhatsApp:</strong> (31) 99115-6941<br />
+            <a href="https://wa.me/5531991156941" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
+            <strong>Site:</strong> <a href="https://www.ricardomariatrancas.com.br" target="_blank" rel="noopener noreferrer">ricardomariatrancas.com.br</a></p>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="card">
-        <img src="images/cmsl.jpg" alt="CMSL" />
-        <div class="card-content">
-          <h3>CMSL - Consórcio Mineira da Sorte</h3>
-          <p>Operadora oficial de jogos de raspadinha e Trem das 11 da Loteria Mineira. Benefícios e kits promocionais para associados.</p>
-          <p><strong>Benefícios:</strong> 9% de comissão, kits promocionais mensais e material POS.</p>
+    <section class="segmento" data-segmento="Loteria">
+      <h2>Loteria</h2>
+      <div class="parceiros">
+        <div class="card">
+          <img src="images/cmsl.jpg" alt="CMSL" />
+          <div class="card-content">
+            <h3>CMSL - Consórcio Mineira da Sorte</h3>
+            <p>Operadora oficial de jogos de raspadinha e Trem das 11 da Loteria Mineira. Benefícios e kits promocionais para associados.</p>
+            <p><strong>Benefícios:</strong> 9% de comissão, kits promocionais mensais e material POS.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -170,10 +248,26 @@
       <a href="https://mg.abrasel.com.br/parceiros/" target="_blank" class="botao-parceiros" rel="noopener noreferrer">Ver todos os parceiros no site da Abrasel MG</a>
     </footer>
 
-    <!-- Botão flutuante para parcerias -->
     <a href="https://wa.me/553172408551" target="_blank" class="botao-wpp-parcerias" title="Falar com responsável pelas parcerias da Abrasel MG" rel="noopener noreferrer">
       🤝 Falar com Parcerias Abrasel
     </a>
   </main>
+
+  <script>
+    const filtro = document.getElementById('filtro-segmento');
+    const segmentos = document.querySelectorAll('.segmento');
+
+    filtro.addEventListener('change', () => {
+      const valor = filtro.value;
+
+      segmentos.forEach(sec => {
+        if(valor === 'todos') {
+          sec.style.display = 'block';
+        } else {
+          sec.style.display = sec.getAttribute('data-segmento') === valor ? 'block' : 'none';
+        }
+      });
+    });
+  </script>
 </body>
 </html>
