--- a/index.html
+++ b/index.html
@@ -1,269 +1,148 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu de Parceiros - Abrasel MG</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    /* Estilos para os botões WhatsApp dentro dos cards */
-    .botao-whatsapp-card {
-      display: inline-block;
-      margin-top: 4px;
-      padding: 6px 12px;
-      background-color: #25D366;
-      color: white;
-      border-radius: 4px;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 0.9rem;
-      transition: background-color 0.3s ease;
-    }
-    .botao-whatsapp-card:hover {
-      background-color: #128C7E;
-    }
-
-    /* Botão flutuante WhatsApp */
-    .botao-wpp-parcerias {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #25D366;
-      color: white;
-      padding: 14px 20px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-      z-index: 1000;
-      font-size: 1rem;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-    .botao-wpp-parcerias:hover {
-      background-color: #128C7E;
-    }
-
-    .segmento {
-      margin-bottom: 3rem;
-    }
-
-    .segmento h2 {
-      text-align: center;
-      margin-bottom: 2rem;
-      font-size: 1.8rem;
-      color: #00703c;
-    }
-
-    /* Estilo para o filtro */
-    #filtro-segmento {
-      display: block;
-      margin: 2rem auto;
-      padding: 0.5rem 1rem;
-      font-size: 1.1rem;
-      border-radius: 6px;
-      border: 1px solid #00703c;
-      max-width: 300px;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
-    <div class="logo-container">
-      <img src="images/logo-abrasel.jpg" alt="Menu de Parceiros - Abrasel MG" class="logo-apresentacao" />
+    <div class="container">
+      <div class="logo-container">
+        <img src="images/logotopo-abrasel.jpg" alt="Abrasel MG" class="logo-apresentacao">
+        <div class="logo-text">
+          <h1>ABRASEL <span>MG</span></h1>
+          <p>Associação Brasileira de Bares e Restaurantes</p>
+        </div>
+      </div>
+      <nav class="nav-menu">
+        <ul>
+          <li><a href="#home" class="active">Início</a></li>
+          <li><a href="#beneficios">Benefícios</a></li>
+          <li><a href="#parceiros">Parceiros</a></li>
+          <li><a href="#associar">Associar-se</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
   <main>
-    <section class="intro">
-      <h1>Menu de Parceiros da Abrasel MG</h1>
-      <p>Descubra um universo de vantagens exclusivas pensadas especialmente para você, associado Abrasel MG.</p>
-      <p>No <strong>Menu de Parceiros</strong>, reunimos empresas e soluções estratégicas para o sucesso do seu negócio: de consultorias e assessorias especializadas a ferramentas de gestão, marketing, energia e seguros — tudo em um só lugar.</p>
-      <p>Aqui você encontra marcas confiáveis, benefícios reais e serviços selecionados para o setor de alimentação fora do lar.</p>
+    <section id="home" class="hero hero-with-logo">
+      <div class="logo-background"></div>
+      <div class="hero-content container">
+        <h1>Menu de Parceiros <span>Abrasel MG</span></h1>
+        <p class="subtitle">Vantagens exclusivas para associados</p>
+        <a href="#parceiros" class="btn-primary">Conheça nossos parceiros</a>
+      </div>
     </section>
 
-    <section class="como-aproveitar">
-      <h2>Como aproveitar?</h2>
-      <p>Ser associado da Abrasel MG é o único requisito! Acesse nosso portal, explore as categorias de interesse e descubra todas as ofertas disponíveis.</p>
-      <p>Ao escolher o serviço ou produto de sua preferência, informe o nome e CNPJ da sua empresa e mencione que é uma oferta encontrada através do Menu de Parceiros da Abrasel MG.</p>
-      <p><strong>Junte-se a mais de 20 mil empresários do setor e transforme o seu restaurante com o Menu de Parceiros da Abrasel MG!</strong></p>
-    </section>
-
-    <!-- Menu de filtro -->
-    <section style="text-align:center; margin-bottom:2rem;">
-      <label for="filtro-segmento"><strong>Filtrar por segmento:</strong></label>
-      <select id="filtro-segmento" aria-label="Filtrar parceiros por segmento">
-        <option value="todos" selected>Todos</option>
-        <option value="Jurídico">Jurídico</option>
-        <option value="Seguros e Benefícios">Seguros e Benefícios</option>
-        <option value="Licenciamento e Regulação">Licenciamento e Regulação</option>
-        <option value="Marketing e Comunicação">Marketing e Comunicação</option>
-        <option value="Consultoria e Gestão">Consultoria e Gestão</option>
-        <option value="Energia e Sustentabilidade">Energia e Sustentabilidade</option>
-        <option value="Treinamentos e Mentorias">Treinamentos e Mentorias</option>
-        <option value="Loteria">Loteria</option>
-      </select>
-    </section>
-
-    <!-- SEGMENTOS -->
-
-    <section class="segmento" data-segmento="Jurídico">
-      <h2>Jurídico</h2>
-      <div class="parceiros">
-        <div class="card">
-          <img src="images/pena-silveira.jpg" alt="Pena e Silveira Advogados" />
-          <div class="card-content">
-            <h3>Pena & Silveira Advogados</h3>
-            <p>Assessoria jurídica exclusiva para bares e restaurantes. Associado Abrasel tem desconto nos serviços.</p>
-            <p><strong>Email:</strong> contato@penasilveira.com.br<br />
-            <strong>WhatsApp:</strong> (31) 98245-6651<br />
-            <a href="https://wa.me/5531982456651" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-            <strong>Site:</strong> <a href="http://www.bareserestaurantes.adv.br" target="_blank" rel="noopener noreferrer">bareserestaurantes.adv.br</a></p>
+    <section id="beneficios" class="benefits">
+      <div class="container">
+        <h2>Como aproveitar?</h2>
+        <div class="benefits-grid">
+          <div class="benefit-card">
+            <i class="fas fa-id-card"></i>
+            <h3>1. Seja associado</h3>
+            <p>Ter sua empresa associada à Abrasel MG é o único requisito para acessar todas as vantagens.</p>
+          </div>
+          <div class="benefit-card">
+            <i class="fas fa-search"></i>
+            <h3>2. Explore as ofertas</h3>
+            <p>Navegue pelas categorias e encontre os serviços que seu negócio precisa.</p>
+          </div>
+          <div class="benefit-card">
+            <i class="fas fa-handshake"></i>
+            <h3>3. Contrate e economize</h3>
+            <p>Informe que é associado Abrasel MG e aproveite os descontos exclusivos.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="segmento" data-segmento="Seguros e Benefícios">
-      <h2>Seguros e Benefícios</h2>
-      <div class="parceiros">
-        <div class="card">
-          <img src="images/bis.jpg" alt="BIS Soluções" />
-          <div class="card-content">
-            <h3>BIS Soluções</h3>
-            <p>Soluções em seguros e benefícios para funcionários dos associados Abrasel.</p>
-            <p><strong>Email:</strong> luizhenrique@bissolucoes.com.br<br />
-            <strong>WhatsApp:</strong> (31) 98448-7057<br />
-            <a href="https://wa.me/5531984487057" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-            <strong>Site:</strong> <a href="https://bissolucoes.com.br" target="_blank" rel="noopener noreferrer">bissolucoes.com.br</a></p>
-          </div>
+    <section id="parceiros" class="partners-section">
+      <div class="container">
+        <h2>Nossos Parceiros</h2>
+        
+        <div class="filter-container">
+          <label for="filtro-segmento">Filtrar por segmento:</label>
+          <select id="filtro-segmento">
+            <option value="todos" selected>Todos os segmentos</option>
+            <option value="Jurídico">Jurídico</option>
+            <option value="Seguros e Benefícios">Seguros e Benefícios</option>
+            <option value="Licenciamento e Regulação">Licenciamento e Regulação</option>
+            <option value="Marketing e Comunicação">Marketing e Comunicação</option>
+            <option value="Consultoria e Gestão">Consultoria e Gestão</option>
+            <option value="Energia e Sustentabilidade">Energia e Sustentabilidade</option>
+            <option value="Treinamentos e Mentorias">Treinamentos e Mentorias</option>
+            <option value="Loteria">Loteria</option>
+          </select>
+        </div>
+
+        <div class="segment-tabs">
+          <button class="tab-btn active" data-segment="todos">Todos</button>
+          <button class="tab-btn" data-segment="Jurídico">Jurídico</button>
+          <button class="tab-btn" data-segment="Seguros e Benefícios">Seguros</button>
+          <button class="tab-btn" data-segment="Licenciamento e Regulação">Licenciamento</button>
+          <button class="tab-btn" data-segment="Marketing e Comunicação">Marketing</button>
+          <button class="tab-btn" data-segment="Consultoria e Gestão">Consultoria</button>
+          <button class="tab-btn" data-segment="Energia e Sustentabilidade">Energia</button>
+          <button class="tab-btn" data-segment="Treinamentos e Mentorias">Treinamentos</button>
+          <button class="tab-btn" data-segment="Loteria">Loteria</button>
+        </div>
+
+        <div class="partners-container">
+          <!-- Parceiros serão carregados aqui via JavaScript -->
         </div>
       </div>
     </section>
 
-    <section class="segmento" data-segmento="Licenciamento e Regulação">
-      <h2>Licenciamento e Regulação</h2>
-      <div class="parceiros">
-        <div class="card">
-          <img src="images/urbanas.jpg" alt="Urbanas Regularizações" />
-          <div class="card-content">
-            <h3>Urbanas Regularizações</h3>
-            <p>Consultoria gratuita em licenciamento com 20% de desconto em serviços de regularização.</p>
-            <p><strong>Email:</strong> comercial@urbanasregularizacoes.com.br<br />
-            <strong>WhatsApp:</strong> (31) 99611-0444<br />
-            <a href="https://wa.me/5531996110444" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-            <strong>Site:</strong> <a href="http://www.urbanasregularizacoes.com.br" target="_blank" rel="noopener noreferrer">urbanasregularizacoes.com.br</a></p>
-          </div>
-        </div>
+    <section id="associar" class="cta-section">
+      <div class="container">
+        <h2>Associe-se à Abrasel MG</h2>
+        <p>Junte-se a mais de 20 mil empresários do setor e transforme seu negócio!</p>
+        <a href="https://quero-associar.abrasel.com.br/" target="_blank" class="btn-primary">Quero me associar</a>
       </div>
     </section>
-
-    <section class="segmento" data-segmento="Marketing e Comunicação">
-      <h2>Marketing e Comunicação</h2>
-      <div class="parceiros">
-        <div class="card">
-          <img src="images/forno-criativo.jpg" alt="Forno Criativo" />
-          <div class="card-content">
-            <h3>Forno Criativo</h3>
-            <p>Assessoria de marketing especializada no setor de alimentação.</p>
-            <p><strong>Instagram:</strong> <a href="https://www.instagram.com/agenciafornocriativo/" target="_blank" rel="noopener noreferrer">@agenciafornocriativo</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="segmento" data-segmento="Consultoria e Gestão">
-      <h2>Consultoria e Gestão</h2>
-      <div class="parceiros">
-        <div class="card">
-          <img src="images/maxup.jpg" alt="MaxUp Consultoria" />
-          <div class="card-content">
-            <h3>MaxUp Consultoria</h3>
-            <p>Consultoria de gestão com 10% de desconto para associados Abrasel.</p>
-            <p><strong>Email:</strong> contato@maxupconsultoria.com.br<br />
-            <strong>WhatsApp:</strong> (31) 97330-1144<br />
-            <a href="https://wa.me/5531973301144" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-            <strong>Site:</strong> <a href="http://www.maxupconsultoria.com.br" target="_blank" rel="noopener noreferrer">maxupconsultoria.com.br</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="segmento" data-segmento="Energia e Sustentabilidade">
-      <h2>Energia e Sustentabilidade</h2>
-      <div class="parceiros">
-        <div class="card">
-          <img src="images/maya.jpg" alt="Maya Energy" />
-          <div class="card-content">
-            <h3>Maya Energy</h3>
-            <p>Referência em eficiência energética com foco em energia solar, hídrica e mercado livre.</p>
-            <p><strong>Contato:</strong> Eric Mota<br />
-            <strong>Email:</strong> eric.mota@mayaenergy.com<br />
-            <strong>Site:</strong> <a href="https://www.assinemaya.com.br" target="_blank" rel="noopener noreferrer">assinemaya.com.br</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="segmento" data-segmento="Treinamentos e Mentorias">
-      <h2>Treinamentos e Mentorias</h2>
-      <div class="parceiros">
-        <div class="card">
-          <img src="images/ricardo.jpg" alt="Ricardo Maria Tranças" />
-          <div class="card-content">
-            <h3>Ricardo Maria Tranças</h3>
-            <p>Mentorias, workshops e treinamentos práticos com 10% de desconto para associados.</p>
-            <p><strong>Contato:</strong> William Matos<br />
-            <strong>Email:</strong> william@multimidiaconsultoria.com.br<br />
-            <strong>WhatsApp:</strong> (31) 99115-6941<br />
-            <a href="https://wa.me/5531991156941" target="_blank" class="botao-whatsapp-card" rel="noopener noreferrer">Falar no WhatsApp</a><br />
-            <strong>Site:</strong> <a href="https://www.ricardomariatrancas.com.br" target="_blank" rel="noopener noreferrer">ricardomariatrancas.com.br</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="segmento" data-segmento="Loteria">
-      <h2>Loteria</h2>
-      <div class="parceiros">
-        <div class="card">
-          <img src="images/cmsl.jpg" alt="CMSL" />
-          <div class="card-content">
-            <h3>CMSL - Consórcio Mineira da Sorte</h3>
-            <p>Operadora oficial de jogos de raspadinha e Trem das 11 da Loteria Mineira. Benefícios e kits promocionais para associados.</p>
-            <p><strong>Benefícios:</strong> 9% de comissão, kits promocionais mensais e material POS.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="associe">
-      <h2>Associe-se à Abrasel MG</h2>
-      <p>Faça parte da rede que fortalece o setor de alimentação fora do lar.</p>
-      <a href="https://quero-associar.abrasel.com.br/" target="_blank" class="botao-associe" rel="noopener noreferrer">Associe-se agora</a>
-    </section>
-
-    <a href="https://wa.me/553172408551" target="_blank" class="botao-wpp-parcerias" title="Falar com responsável pelas parcerias da Abrasel MG" rel="noopener noreferrer">
-      🤝 Falar com Parcerias Abrasel
-    </a>
   </main>
 
-  <script>
-    const filtro = document.getElementById('filtro-segmento');
-    const segmentos = document.querySelectorAll('.segmento');
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="images/logotopo-abrasel.jpg" alt="Abrasel MG" class="logo-footer">
+        </div>
+        <div class="footer-contact">
+          <h3>Contato</h3>
+          <p><i class="fas fa-phone"></i> (31) 3282-5533</p>
+          <p><i class="fas fa-envelope"></i> parceriamg@abrasel.com.br</p>
+        </div>
+        <div class="footer-social">
+          <h3>Redes Sociais</h3>
+          <div class="social-icons">
+            <a href="https://www.instagram.com/abraselminasgerais/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100094579255533" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://wa.me/553172408551" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Abrasel MG - Todos os direitos reservados</p>
+      </div>
+    </div>
+  </footer>
 
-    filtro.addEventListener('change', () => {
-      const valor = filtro.value;
+  <!-- Botões flutuantes -->
+  <div class="floating-buttons">
+    <a href="https://wa.me/553172408551" class="floating-btn whatsapp-btn" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href=https://www.instagram.com/abraselminasgerais/ class="floating-btn instagram-btn" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
 
-      segmentos.forEach(sec => {
-        if(valor === 'todos') {
-          sec.style.display = 'block';
-        } else {
-          sec.style.display = sec.getAttribute('data-segmento') === valor ? 'block' : 'none';
-        }
-      });
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
