--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       </div>
     </section>
 
+    <!-- Seção de introdução adicionada aqui -->
+    <section class="intro-section container">
+      <h1>Menu de Parceiros da Abrasel MG</h1>
+      <p>Descubra um universo de vantagens exclusivas pensadas especialmente para você, associado Abrasel MG.</p>
+      <p>No <strong>Menu de Parceiros</strong>, reunimos empresas e soluções estratégicas para o sucesso do seu negócio: de consultorias e assessorias especializadas a ferramentas de gestão, marketing, energia e seguros — tudo em um só lugar.</p>
+      <p>Aqui você encontra marcas confiáveis, benefícios reais e serviços selecionados para o setor de alimentação fora do lar.</p>
+    </section>
+
     <section id="beneficios" class="benefits">
       <div class="container">
         <h2>Como aproveitar?</h2>
@@ -57,6 +65,12 @@
             <h3>3. Contrate e economize</h3>
             <p>Informe que é associado Abrasel MG e aproveite os descontos exclusivos.</p>
           </div>
+        </div>
+        
+        <!-- Texto adicional sobre como aproveitar -->
+        <div class="como-aproveitar-text">
+          <p>Ser associado da Abrasel MG é o único requisito! Acesse nosso portal, explore as categorias de interesse e descubra todas as ofertas disponíveis.</p>
+          <p>Ao escolher o serviço ou produto de sua preferência, informe o nome e CNPJ da sua empresa e mencione que é uma oferta encontrada através do Menu de Parceiros da Abrasel MG.</p>
         </div>
       </div>
     </section>
