Adição de todos segmentos

--- a/index.html
+++ b/index.html
@@ -79,32 +79,42 @@
       <div class="container">
         <h2>Nossos Parceiros</h2>
         
-        <div class="filter-container">
-          <label for="filtro-segmento">Filtrar por segmento:</label>
-          <select id="filtro-segmento">
-            <option value="todos" selected>Todos os segmentos</option>
-            <option value="Jurídico">Jurídico</option>
-            <option value="Seguros e Benefícios">Seguros e Benefícios</option>
-            <option value="Licenciamento e Regulação">Licenciamento e Regulação</option>
-            <option value="Marketing e Comunicação">Marketing e Comunicação</option>
-            <option value="Consultoria e Gestão">Consultoria e Gestão</option>
-            <option value="Energia e Sustentabilidade">Energia e Sustentabilidade</option>
-            <option value="Treinamentos e Mentorias">Treinamentos e Mentorias</option>
-            <option value="Loteria">Loteria</option>
-          </select>
-        </div>
+        
+<div class="filter-container">
+  <label for="filtro-segmento">Filtrar por segmento:</label>
+  <select id="filtro-segmento">
+    <option value="todos" selected>Todos os segmentos</option>
+    <option value="Jurídico">Jurídico</option>
+    <option value="Assessoria">Assessoria</option>
+    <option value="Seguros e Benefícios">Seguros e Benefícios</option>
+    <option value="Licenciamento e Regulação">Licenciamento e Regulação</option>
+    <option value="Marketing e Comunicação">Marketing e Comunicação</option>
+    <option value="Consultoria e Gestão">Consultoria e Gestão</option>
+    <option value="Energia e Sustentabilidade">Energia e Sustentabilidade</option>
+    <option value="Treinamentos e Mentorias">Treinamentos e Mentorias</option>
+    <option value="Alimentos e Bebidas">Alimentos e Bebidas</option>
+    <option value="Limpeza e Higiene">Limpeza e Higiene</option>
+    <option value="Tecnologia e Sistemas">Tecnologia e Sistemas</option>
+    <option value="Loteria">Loteria</option>
+  </select>
+</div>
 
-        <div class="segment-tabs">
-          <button class="tab-btn active" data-segment="todos">Todos</button>
-          <button class="tab-btn" data-segment="Jurídico">Jurídico</button>
-          <button class="tab-btn" data-segment="Seguros e Benefícios">Seguros</button>
-          <button class="tab-btn" data-segment="Licenciamento e Regulação">Licenciamento</button>
-          <button class="tab-btn" data-segment="Marketing e Comunicação">Marketing</button>
-          <button class="tab-btn" data-segment="Consultoria e Gestão">Consultoria</button>
-          <button class="tab-btn" data-segment="Energia e Sustentabilidade">Energia</button>
-          <button class="tab-btn" data-segment="Treinamentos e Mentorias">Treinamentos</button>
-          <button class="tab-btn" data-segment="Loteria">Loteria</button>
-        </div>
+<div class="segment-tabs">
+  <button class="tab-btn active" data-segment="todos">Todos</button>
+  <button class="tab-btn" data-segment="Jurídico">Jurídico</button>
+  <button class="tab-btn" data-segment="Assessoria">Assessoria</button>
+  <button class="tab-btn" data-segment="Seguros e Benefícios">Seguros e Benefícios</button>
+  <button class="tab-btn" data-segment="Licenciamento e Regulação">Licenciamento e Regulação</button>
+  <button class="tab-btn" data-segment="Marketing e Comunicação">Marketing e Comunicação</button>
+  <button class="tab-btn" data-segment="Consultoria e Gestão">Consultoria e Gestão</button>
+  <button class="tab-btn" data-segment="Energia e Sustentabilidade">Energia e Sustentabilidade</button>
+  <button class="tab-btn" data-segment="Treinamentos e Mentorias">Treinamentos e Mentorias</button>
+  <button class="tab-btn" data-segment="Alimentos e Bebidas">Alimentos e Bebidas</button>
+  <button class="tab-btn" data-segment="Limpeza e Higiene">Limpeza e Higiene</button>
+  <button class="tab-btn" data-segment="Tecnologia e Sistemas">Tecnologia e Sistemas</button>
+  <button class="tab-btn" data-segment="Loteria">Loteria</button>
+</div>
+
 
         <div class="partners-container">
           <!-- Parceiros serão carregados aqui via JavaScript -->
